# Clinux-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MakeFile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
clinux/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py  types.py  utils.py  validators.py
clinux/adapters/: __init__.py  proot_adapter.py  qemu_adapter.py  storage_adapter.py
clinux/commands/: __init__.py  clone.py  config_cmd.py  create.py  delete.py  info.py  install.py  list.py  migrate.py  proot.py  run.py  snapshot.py
clinux/core/: __init__.py  base_manager.py  disk_manager.py  iso_manager.py  network_manager.py  proot_manager.py  qemu_manager.py  rootfs_manager.py  snapshot_manager.py  storage_manager.py
clinux/docs/: api.md  commands.md  configuration.md  contributing.md  index.md  installation.md  usage.md
clinux/models/: __init__.py  config_model.py  disk.py  network.py  rootfs.py  snapshot.py  vm.py
clinux/scripts/: build_docs.sh  install_deps.sh  run_tests.sh  setup_dev.sh
clinux/services/: __init__.py  health_service.py  proot_service.py  qemu_service.py  template_service.py  validation_service.py
clinux/templates/: __init__.py
clinux/tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_commands_delete.py  test_models_vm.py  (+13 more)
examples/: README.md  create_ubuntu_vm.py  quick_proot.py  snapshot_workflow.py
(+22 files in other folders)
