[metadata]
name = clinux
version = 1.0.0
author = CLINUX Team
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click>=8.0
    rich>=10.0
    pyyaml>=5.4
    psutil>=5.8

[options.entry_points]
console_scripts =
    clinux = clinux.cli:main

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true